# Proyt

./: .gitignore  CMakeCache.txt  CMakeLists.txt  cmake_install.cmake
POC/: .pylintrc  Makefile  mypy.ini
POC/src/lexing/: lexer.py  tokens.py
POC/src/processes/: tokenization.py
include/proyt/: ast.h  lexer.h  token.h
res/: example.pro
src/: lexer.cpp  main.cpp
